--- a/js/src/styles/main.scss
+++ b/js/src/styles/main.scss
@@ -1,38 +1,39 @@
 @import 'variables';
 
-@import 'libs/bootstrap/mixins';
-@import 'libs/bootstrap/root';
-@import 'libs/bootstrap/print';
-@import 'libs/bootstrap/reboot';
-@import 'libs/bootstrap/type';
-@import 'libs/bootstrap/images';
-@import 'libs/bootstrap/code';
-@import 'libs/bootstrap/grid';
-@import 'libs/bootstrap/tables';
-@import 'libs/bootstrap/forms';
-@import 'libs/bootstrap/buttons';
-@import 'libs/bootstrap/transitions';
-@import 'libs/bootstrap/dropdown';
-@import 'libs/bootstrap/button-group';
-@import 'libs/bootstrap/input-group';
-@import 'libs/bootstrap/custom-forms';
-@import 'libs/bootstrap/nav';
-@import 'libs/bootstrap/navbar';
-//@import 'libs/bootstrap/card';
-@import 'libs/bootstrap/breadcrumb';
-@import 'libs/bootstrap/pagination';
-//@import 'libs/bootstrap/badge';
-//@import 'libs/bootstrap/jumbotron';
-//@import 'libs/bootstrap/alert';
-//@import 'libs/bootstrap/progress';
-@import 'libs/bootstrap/media';
-//@import 'libs/bootstrap/list-group';
-@import 'libs/bootstrap/close';
-//@import 'libs/bootstrap/modal';
-//@import 'libs/bootstrap/tooltip';
-//@import 'libs/bootstrap/popover';
-//@import 'libs/bootstrap/carousel';
-@import 'libs/bootstrap/utilities';
+@import '~bootstrap/scss/mixins';
+@import '~bootstrap/scss/root';
+@import '~bootstrap/scss/reboot';
+@import '~bootstrap/scss/type';
+@import '~bootstrap/scss/images';
+@import '~bootstrap/scss/code';
+@import '~bootstrap/scss/grid';
+@import '~bootstrap/scss/tables';
+@import '~bootstrap/scss/forms';
+@import '~bootstrap/scss/buttons';
+@import '~bootstrap/scss/transitions';
+@import '~bootstrap/scss/dropdown';
+@import '~bootstrap/scss/button-group';
+@import '~bootstrap/scss/input-group';
+@import '~bootstrap/scss/custom-forms';
+@import '~bootstrap/scss/nav';
+@import '~bootstrap/scss/navbar';
+//@import '~bootstrap/scss/card';
+//@import '~bootstrap/scss/breadcrumb';
+//@import '~bootstrap/scss/pagination';
+//@import '~bootstrap/scss/badge';
+//@import '~bootstrap/scss/jumbotron';
+//@import '~bootstrap/scss/alert';
+//@import '~bootstrap/scss/progress';
+@import '~bootstrap/scss/media';
+@import '~bootstrap/scss/list-group';
+@import '~bootstrap/scss/close';
+//@import '~bootstrap/scss/modal';
+//@import '~bootstrap/scss/tooltip';
+//@import '~bootstrap/scss/popover';
+//@import '~bootstrap/scss/carousel';
+@import '~bootstrap/scss/utilities';
+//@import '~bootstrap/scss/print';
+
 
 //@import 'libs/font-awesome-sass/stylesheets/font-awesome';
 @import 'theme';
