--- a/js/src/styles/main.scss
+++ b/js/src/styles/main.scss
@@ -4,17 +4,17 @@
 @import '~bootstrap/scss/root';
 @import '~bootstrap/scss/reboot';
 @import '~bootstrap/scss/type';
-@import '~bootstrap/scss/images';
+//@import '~bootstrap/scss/images';
 @import '~bootstrap/scss/code';
 @import '~bootstrap/scss/grid';
-@import '~bootstrap/scss/tables';
-@import '~bootstrap/scss/forms';
+//@import '~bootstrap/scss/tables';
+//@import '~bootstrap/scss/forms';
 @import '~bootstrap/scss/buttons';
-@import '~bootstrap/scss/transitions';
-@import '~bootstrap/scss/dropdown';
-@import '~bootstrap/scss/button-group';
-@import '~bootstrap/scss/input-group';
-@import '~bootstrap/scss/custom-forms';
+//@import '~bootstrap/scss/transitions';
+//@import '~bootstrap/scss/dropdown';
+//@import '~bootstrap/scss/button-group';
+//@import '~bootstrap/scss/input-group';
+//@import '~bootstrap/scss/custom-forms';
 @import '~bootstrap/scss/nav';
 @import '~bootstrap/scss/navbar';
 //@import '~bootstrap/scss/card';
@@ -24,9 +24,9 @@
 //@import '~bootstrap/scss/jumbotron';
 //@import '~bootstrap/scss/alert';
 //@import '~bootstrap/scss/progress';
-@import '~bootstrap/scss/media';
+//@import '~bootstrap/scss/media';
 @import '~bootstrap/scss/list-group';
-@import '~bootstrap/scss/close';
+//@import '~bootstrap/scss/close';
 //@import '~bootstrap/scss/modal';
 //@import '~bootstrap/scss/tooltip';
 //@import '~bootstrap/scss/popover';
