--- a/js/src/styles/main.scss
+++ b/js/src/styles/main.scss
@@ -8,7 +8,7 @@
 @import '~bootstrap/scss/code';
 @import '~bootstrap/scss/grid';
 //@import '~bootstrap/scss/tables';
-//@import '~bootstrap/scss/forms';
+@import '~bootstrap/scss/forms';
 @import '~bootstrap/scss/buttons';
 //@import '~bootstrap/scss/transitions';
 //@import '~bootstrap/scss/dropdown';
@@ -36,5 +36,6 @@
 
 
 //@import 'libs/font-awesome-sass/stylesheets/font-awesome';
+@import 'loading';
 @import 'theme';
 @import 'general';
